exports[`placeholder should properly default to & when not passed a parent 1`] = `
Object {
  "input": Object {
    "&:-moz-placeholder": Object {
      "color": "blue",
    },
    "&:-ms-input-placeholder": Object {
      "color": "blue",
    },
    "&::-moz-placeholder": Object {
      "color": "blue",
    },
    "&::-webkit-input-placeholder": Object {
      "color": "blue",
    },
  },
}
`;

exports[`placeholder should properly pass parent and styles object 1`] = `
Object {
  "input:-moz-placeholder": Object {
    "color": "blue",
  },
  "input:-ms-input-placeholder": Object {
    "color": "blue",
  },
  "input::-moz-placeholder": Object {
    "color": "blue",
  },
  "input::-webkit-input-placeholder": Object {
    "color": "blue",
  },
}
`;

exports[`placeholder should throw a warning when passed more than 2 parameters 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- mixins/placeholder.js --%c

placeholder %cwill be deprecated as of %cversion 3.0%c of ✨ polished. You should use the %c::placeholder pseudo-element%c instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#placeholder%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ WARNING ✨ ---- mixins/placeholder.js --%c

placeholder %cexpects a maximum of %c2 parameters%c. However, you passed %c3 parameters%c. This additional parameter was ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#placeholder%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`placeholder should throw an error when not passed any parameters 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/placeholder.js --%c

placeholder %crequires a %c2nd parameter%c(%cundefined%c: %cobject%c). However, you did not pass %cundefined%c.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#placeholder%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`placeholder should throw an error when passed a non-object as its second parameter 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/placeholder.js --%c

placeholder %cexpects a %c2nd parameter%c(%cundefined%c: %cobject%c). However, you passed (%c\'styles\'%c:%cstring%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#placeholder%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`placeholder should throw an error when passed a non-string as its first parameter 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/placeholder.js --%c

placeholder %cexpects a %c1st parameter%c(%cundefined%c: %cstring%c). However, you passed (%c\'1\'%c:%cnumber%c) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#placeholder%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: green; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: red; font-size: 12px; font-style: italic",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
